add frequency counter

--- a/frequency_counter/index.html
+++ b/frequency_counter/index.html
@@ -3,44 +3,51 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Character Counter</title>
+    <title>String Compare</title>
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="alphanumeric.js"></script>
+    <script src="comparator.js"></script>
 </head>
 
 <body>
     <div class="text-center">
-        <h1>Alpha-Numeric character counter</h1>
+        <h1>Check frequency of two string</h1>
     </div>
 
     <div class="container margintop-5em" id="app">
         <div class="input-group text-center margin-0auto">
-            <span>Enter Alpha Numeric string: </span>
+            <span>Enter data for first array</span>
             <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm"
-                placeholder="AnsweRs4you" v-model="alphanumericCharacter" v-on:keyup="count">
+                placeholder="one" v-model="str1" v-on:keyup="compare">
+            <br>
+
+            <span>Enter data for second array</span>
+            <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm"
+                placeholder="eno" v-model="str2" v-on:keyup="compare">
             <br>
         </div>
-        <template v-if="results" v-for="(value, key) in results">
-            <div class="text-center">
-                {{ key }} : {{ value }}
-            </div>
-        </template>
+        <div class="text-center">
+            Does both string have same characters: <b>{{ result }}</b>
+        </div>
     </div>
 </body>
 <script>
     const vueApp = new Vue({
         el: '#app',
         data: {
-            alphanumericCharacter: '',
-            results: ''
+            str1: 'one',
+            str2: 'eno',
+            result: ''
+        },
+        mounted() {
+            this.result = same(this.str1, this.str2)
         },
         methods: {
-            count: function (event) {
-                this.results = alphanumericCharCount(this.alphanumericCharacter)
+            compare: function (event) {
+                this.result = same(this.str1, this.str2)
             }
         }
     })
