--- a/frequency_counter/index.html
+++ b/frequency_counter/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="text-center">
-        <h1>Check frequency of two string</h1>
+        <h1>Check frequency of two strings</h1>
     </div>
 
     <div class="container margintop-5em" id="app">
